<resources>
    <string name="app_name">Cash Buddy</string>

    <!--Navigation-->
    <string name="title_home">Home</string>
    <string name="title_deals">Deals</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_topUp">Top Up</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_create">Create</string>

    <!-- Sign Out Confirmation Message -->
    <string name="signOut_title">Sign Out</string>
    <string name="signOut_confirmation">You are signing out. Are you sure?</string>
    <string name="signOut_confirm">Yes</string>
    <string name="signOut_cancel">No</string>

    <!-- Set Price Confirmation Message -->
    <string name="setPrice_title">Confirmation</string>
    <string name="setPrice_confirm">Confirm</string>
    <string name="setPrice_cancel">Cancel</string>

    <!--Sign Up and Log in-->
    <string name="signUpText"><u>Sign Up</u></string>

    <!-- Login and register error -->
    <string name="requires_phonenum">Phone Number is required</string>

    <!-- Authentication -->
    <string name="authentication_success">Authentication success.</string>
    <string name="authentication_failed">Authentication failed.</string>

    <!--Menus-->
    <string name="topUpText">Top Up</string>
    <string name="scanText">Scan</string>
    <string name="transferText">Transfer</string>
    <string name="withdrawText">Withdraw</string>
    <string name="qrCodeText">QR Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_merchant_main">MerchantMainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>

    <!--Titles-->
    <string name="confirmTopUpTitle">Confirm Top Up</string>
    <string name="confirmWithdrawalTitle">Confirm Withdrawal</string>
    <string name="verifyMerchantTitle">Merchant Verification</string>
    <string name="aboutTitle">About Cash Buddy</string>
    <string name="changeSecurityCodeTitle">Change Security Code</string>
    <string name="contactUsTitle">Contact Us</string>
    <string name="phoneNumVerificationTitle">Phone Number Verification</string>
    <string name="editProfileTitle">Edit Profile</string>
    <string name="securityCodeVerificationTitle">Security Code Verification</string>
    <string name="dealTitle">Deals</string>
    <string name="convertTitle">Convert Currency</string>
    <string name="manageCurrenciesTitle">Manage Currencies</string>
    <string name="makePaymentRequestTitle">Make Payment Request</string>
    <string name="paymentRequestTitle">Payment Requests</string>
    <string name="sentReqTitle">Sent Requests</string>
    <string name="receivedReqTitle">Received Requests</string>
    <string name="splitBillsTitle">Split Bills</string>
    <string name="splitBillsDetailTitle">Split Bills Details</string>

    <!--Error-->
    <string name="emailNull">Email is required</string>
    <string name="passwordNull">Security code is required</string>
    <string name="nameNull">Name is required</string>
    <string name="phoneNumberNull">Phone number is required</string>
    <string name="locationNull">Location is required</string>
    <string name="emailError">Invalid email</string>
    <string name="passwordError">Your security code must be 6 digits</string>
    <string name="phoneNumberError">Invalid phone number</string>
    <string name="phoneNumberRegistered">Phone number is already used</string>
    <string name="wrongOTP">Verification pin is wrong</string>

    <string-array name="methods">
        <item>Select Method</item>
        <item>Scan QR</item>
        <item>Telephone Number</item>
    </string-array>

    <string-array name="transfer_methods">
        <item>Select Method</item>
        <item>Scan QR</item>
        <item>Telephone Number</item>
        <item>Bank Account</item>
    </string-array>

    <string-array name="top_up_methods">
        <item>Select Method</item>
        <item>Bank Transfer</item>
        <item>Cash Buddy Zone</item>
    </string-array>

    <string-array name="typePaymentRequest">
        <item>Select Type</item>
        <item>Goods</item>
        <item>Services</item>
    </string-array>

    <string-array name="splitBill">
        <item>1 person</item>
        <item>2 people</item>
        <item>3 people</item>
        <item>4 people</item>
    </string-array>

</resources>
