<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.cashbuddy.Fragment.All.ProfileFragment">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="32sp"
            android:layout_marginTop="16sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ACCOUNT"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:gravity="left|center"
                android:text="@string/editProfileTitle"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="32sp"
            android:layout_marginTop="14sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SECURITY"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/changePassButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:gravity="left|center"
                android:text="@string/changeSecurityCodeTitle"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="14sp"
            android:layout_marginEnd="8sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ABOUT"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:gravity="left|center"
                android:text="@string/aboutTitle"
                android:textSize="14dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/contactButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:gravity="left|center"
                android:text="@string/contactUsTitle"
                android:textSize="14dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="45sp"
            android:layout_marginEnd="10sp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:theme="@style/PrimaryColorButton"
                android:text="@string/signOut_title"
                
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
