<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  android:id="@+id/user_home_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.asus.cashbuddy.Fragment.User.UserHomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageButton
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:src="@drawable/ic_account_circle_black_80dp"
                android:tint="@color/White" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">
            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_top_corners"
                android:gravity="center"
                android:text="Balance"
                android:textColor="@color/White"
                android:textSize="18sp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/Balance"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_bottom_corners"
                android:gravity="center"
                android:text="Rp"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="65dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/topupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_button"
                    android:src="@drawable/ic_add_black_50dp"
                    android:tint="@color/White" />

                <TextView
                    android:id="@+id/topUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topUpText"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/scanButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_button"
                    android:src="@drawable/ic_qr_code_35dp"
                    android:tint="@color/White" />

                <TextView
                    android:id="@+id/scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanText"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/transferButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_button"
                    android:src="@drawable/ic_transfer_50dp"
                    android:tint="@color/White" />

                <TextView
                    android:id="@+id/transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transferText"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>